--- a/style.css
+++ b/style.css
@@ -1090,7 +1090,7 @@ xclip
     color: #999;
 }
 
-.message-box h2 {
+.message-box h3 {
     font-size: 38px;
     font-weight: 500;
     line-height: 62px;
